--- a/running-form.html
+++ b/running-form.html
@@ -5,6 +5,6 @@
     <title>Dynamic form</title>
 </head>
 <body>
-<script type="text/javascript" src="http://www.digitalpromo-dev.de/interface/_admin/test_dynamic_form/build-form-ew.php"></script>
+<script type="text/javascript" src="http://localhost/test/custom-form/jquery.dform-master/build-form-ew.php"></script>
 </body>
 </html>
