--- a/test.html
+++ b/test.html
@@ -14,5 +14,7 @@
 $(function () {
     // Create a form from some JSON
   $.getJSON('form1.json').done(function(data){$("#demo-1-form").dform(data);});
+
+alert('michael update test.html');
 });
 </script>
