update test hello
hello

--- a/test.html
+++ b/test.html
@@ -16,5 +16,6 @@ $(function () {
   $.getJSON('form1.json').done(function(data){$("#demo-1-form").dform(data);});
 
 alert('michael update test.html');
+alert('hello');
 });
 </script>
